SOW Horiz. Scrollbar Fix

--- a/styles.css
+++ b/styles.css
@@ -5519,12 +5519,14 @@ body.modal-open .custom-cursor {
 @media (max-width: 480px) {
     #sowCreatorContainer {
         padding: 0;
+        overflow-x: hidden;
     }
-    
+
     .sow-creator-form {
         border-radius: 0;
         max-height: 100%;
         max-width: 100%;
+        overflow-x: hidden;
     }
     
     .sow-form-header,
